--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,4 +1,9 @@
 version = 3.10.3
 runner.dialect = scala3Future
 preset=IntelliJ
+align.preset = more
 maxColumn = 120
+docstrings.wrap = no
+rewrite.trailingCommas.style = keep
+newlines.source=keep
+newlines.topLevelStatementBlankLines = [{blanks { after = 1 }}]
