Update scalafmt settings

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -6,3 +6,4 @@ maxColumn = 120
 docstrings.wrap = no
 rewrite.trailingCommas.style = keep
 newlines.source=keep
+rewrite.insertBraces.allBlocks = true
