--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,13 @@
     "files.watcherExclude": {
         "**/target": true
     },
+    "editor.rulers": [120],
     "editor.codeActionsOnSave": {
         "source.organizeImports": "explicit"
-    }
+    },
+    "metals.autoImportBuilds": "all",
+    "metals.enableBestEffort": true,
+    "metals.enableIndentOnPaste": true,
+    "metals.startMcpServer": true,
+    "metals.suggestLatestUpgrade": "on"
 }
